src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_GP_Discount_Amount__c</fullName>
        <label>Additional GP Discount Amount</label>
        <summarizedField>QuoteLineItem.Additional_GP_Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Normal</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BilledAmount_Rental__c</fullName>
        <label>BilledAmount Rental</label>
        <summarizedField>Payment_Schedule__c.BilledAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment_Schedule__c.Description__c</field>
            <operation>equals</operation>
            <value>Rental Income - Office,Rent Discount,Grace Period - Office Leases</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment_Schedule__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BilledAmount_Service_Charge__c</fullName>
        <label>BilledAmount Service Charge</label>
        <summarizedField>Payment_Schedule__c.BilledAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment_Schedule__c.Description__c</field>
            <operation>equals</operation>
            <value>Service Charge</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment_Schedule__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Booking_expiry_Date__c</fullName>
        <label>Booking expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCL_Sign_Date__c</fullName>
        <label>CCL Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Unavailable</fullName>
                </value>
                <value>
                    <fullName>Unit Already Soft Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_ID__c</fullName>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Opportunity.Contact__r.FirstName + &quot; &quot; + Opportunity.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOA Approver</label>
        <referenceTo>DOA_Approver__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOA_Discount_Amount__c</fullName>
        <label>DOA Discount Amount</label>
        <summarizedField>QuoteLineItem.DOA_Discount_Amount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DOA_Discount_Roll_Up_Summary__c</fullName>
        <label>DOA Discount</label>
        <summarizedField>QuoteLineItem.DOA_Discount2__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Normal</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DOA_Discount__c</fullName>
        <formula>If( Total_Best_Rate__c &lt;&gt;0, (DOA_Discount_Amount__c+ Additional_GP_Discount_Amount__c -Total_Negative_GP_Discount_Amount__c- Total_Upselling_Discount_Amount__c)/(Total_Best_Rate__c+ Total_Best_Rate_for_Proposed_GP__c ) , 
IF(AND(Total_Best_Rate__c=0,TotalPrice=0),1,0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOA Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOA_Discount_percent__c</fullName>
        <description>DOA Discount percentage of the total best rate</description>
        <formula>(Offer_Best_Discount_Amount__c +  Additional_GP_Discount_Amount__c) /  Total_Best_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOA Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_GP_Discount_Amount__c</fullName>
        <label>Default GP Discount Amount</label>
        <summarizedField>QuoteLineItem.Default_GP_Discount_Amount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <formula>(Total_Best_Rate_Roll_Up_Summary__c  - Total_Offered_Price_Roll_Up_Summary__c )/ Total_Best_Rate_Roll_Up_Summary__c</formula>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expansion_Separate_Amendment_Terms__c</fullName>
        <formula>TEXT(Opportunity.Expansion_Separate_Amendment_Terms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expansion Separate Amendment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Mechanism__c</fullName>
        <label>Grace Period Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>initial</fullName>
                </value>
                <value>
                    <fullName>every</fullName>
                </value>
                <value>
                    <fullName>end</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_Period_Period__c</fullName>
        <label>Grace Period (period)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>days</fullName>
                </value>
                <value>
                    <fullName>months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_Period__c</fullName>
        <label>Grace Period</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready To Sync</fullName>
                </value>
                <value>
                    <fullName>Synched</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_End_Date__c</fullName>
        <label>Lease End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date__c</fullName>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Terms_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Terms Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 1 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_2_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 2 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_3_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 3 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manually_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as part of the approval process to validate that the submit for approval is manually submitted. This will be used as a validation rule, prevent the user from changing the status manually to submitted.</description>
        <label>Manually submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Payments__c</fullName>
        <label>Number Of Payments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Products__c</fullName>
        <label>Number Of Products</label>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Quote_Line_Items__c</fullName>
        <label>Number of Quote Line Items</label>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Revisions__c</fullName>
        <label>Number of Revisions</label>
        <summaryForeignKey>Quote_Revision__c.Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offer_Best_Discount_Amount__c</fullName>
        <label>Offer/Best Discount Amount</label>
        <summarizedField>QuoteLineItem.Offer_Best_Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Normal</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity.Id</formula>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owners_Manager_Email__c</fullName>
        <description>Populated as part of the approval process for Soft Booking Extension.</description>
        <label>Owners Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payment Terms</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Approval_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Approval Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_List_Number_Of_Payments__c</fullName>
        <label>Price List Number Of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Product Code pushed from the Quote Line Item for Integration</description>
        <label>Product Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Booking_Expiry_Ext_Date__c</fullName>
        <formula>Booking_expiry_Date__c +15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Booking Expiry Extension</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Booking_Expiry_Extension__c</fullName>
        <label>Proposed Booking Expiry Extension</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_End_Date__c</fullName>
        <label>Proposed End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Grace_Period_Months__c</fullName>
        <label>Proposed Grace Period Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Grace_Period__c</fullName>
        <label>Proposed Grace Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <label>Proposed Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Approved_Via_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be used to capture that the approval has been completed via the approval process, this will be used to enforce a validation rule so users can not change to approved without going through the approval process.</description>
        <label>Quote Approved Via Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Rejected_Via_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Rejected Via Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories &amp; Footwear</fullName>
                </value>
                <value>
                    <fullName>Artists-Artisans</fullName>
                </value>
                <value>
                    <fullName>F&amp;B, Cold Kitchen</fullName>
                </value>
                <value>
                    <fullName>F&amp;B, Hot Kitchen</fullName>
                </value>
                <value>
                    <fullName>F&amp;B, Licensed</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Food-Grocery</fullName>
                </value>
                <value>
                    <fullName>Gym</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Beauty</fullName>
                </value>
                <value>
                    <fullName>Home &amp; Electricals</fullName>
                </value>
                <value>
                    <fullName>Home Accessories</fullName>
                </value>
                <value>
                    <fullName>Leisure</fullName>
                </value>
                <value>
                    <fullName>Local Services</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Performing Arts</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Nursery</fullName>
                </value>
                <value>
                    <fullName>Bakeries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soft_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soft Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_Booking_Date_Time__c</fullName>
        <label>Soft Booking Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Soft_Booking_Extension_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soft Booking Extension Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Best_Rate_Roll_Up_Summary__c</fullName>
        <label>Total Best Rate</label>
        <summarizedField>QuoteLineItem.Total_Best_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Normal, Revision</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Best_Rate__c</fullName>
        <label>Total Rent Best Rate</label>
        <summarizedField>QuoteLineItem.Total_Best_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Parent_Quote_Line_Item__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Best_Rate_for_Proposed_GP__c</fullName>
        <label>Total Best Rate for Proposed GP</label>
        <summarizedField>QuoteLineItem.Best_Rate_for_Proposed_GP__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Revision_Number__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Charge_Price__c</fullName>
        <description>Total price for all quote line items with any charge type</description>
        <label>Total Charge Price</label>
        <summarizedField>QuoteLineItem.Total_Best_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Revision, Normal</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.Parent_Quote_Line_Item__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total Discount</label>
        <summarizedField>QuoteLineItem.TOTAL_Discount__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Normal</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Discount_percent__c</fullName>
        <description>Total Discount Percentage</description>
        <formula>(Offer_Best_Discount_Amount__c +  Default_GP_Discount_Amount__c +  Additional_GP_Discount_Amount__c ) /  Total_Best_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Negative_GP_Discount_Amount__c</fullName>
        <label>Total Negative GP Discount Amount</label>
        <summarizedField>QuoteLineItem.Negative_GP_Discount_Amount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Offer_Price__c</fullName>
        <label>Total Offer Price</label>
        <summarizedField>QuoteLineItem.Total_Offered_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Parent_Quote_Line_Item__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Offered_Price_Roll_Up_Summary__c</fullName>
        <label>Total Offered Price</label>
        <summarizedField>QuoteLineItem.Total_Offered_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Normal, Grace Period, Revision</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Amount__c</fullName>
        <formula>Total_Offered_Price_Roll_Up_Summary__c +  Total_Charge_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Upselling_Discount_Amount__c</fullName>
        <label>Total Upselling Discount Amount</label>
        <summarizedField>QuoteLineItem.Upselling_Discount_Amount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TurnOver_Rent__c</fullName>
        <label>TurnOver Rent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Downsize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Sub-Category</label>
        <referenceTo>Unit_Sub_Category__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yardi_Brand_Code__c</fullName>
        <formula>Opportunity.Account.Yardi_Account_Id__c</formula>
        <label>Yardi Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Customer_Code__c</fullName>
        <formula>IF( ISBLANK(Contact.Account.ParentId), Contact.Account.Yardi_Account_Id__c ,  Contact.Account.Parent.Yardi_Account_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Error_Message__c</fullName>
        <label>Yardi Integration Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Status__c</fullName>
        <label>Yardi Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Integration</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>Approved_Quote</fullName>
        <active>true</active>
        <label>Approved Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Quote</fullName>
        <active>true</active>
        <label>New Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Description_field_cannot_exceed_2000</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name &lt;&gt; &quot;Integration User Profile&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
LEN(Description )  &gt;=  2000</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>The description cannot be longer than 2000 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_allow_creation_of_new_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;  NOT(ISBLANK(Opportunity.SyncedQuoteId))&amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
        <errorMessage>Opportunity selected by you already have synced quote. Please choose another</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_not_before_Start_Date</fullName>
        <active>true</active>
        <description>Validate that the Lease End Date can not be before the Lease Start Date or TODAY.</description>
        <errorConditionFormula>$Profile.Name &lt;&gt; &quot;Integration User Profile&quot; &amp;&amp; 
OR( Proposed_End_Date__c &lt; Proposed_Start_Date__c , 
Proposed_End_Date__c = Proposed_Start_Date__c )</errorConditionFormula>
        <errorMessage>The Proposed End Date can not be the same or before the Proposed Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_quote_when_approved_forSystem_Admin</fullName>
        <active>false</active>
        <description>Throws error if user tries to edit record after approval.</description>
        <errorConditionFormula>AND( ISPICKVAL(PRIORVALUE(Status),&quot;Approved&quot;),
$Profile.Name &lt;&gt; &quot;Integration User Profile&quot;,
$Profile.Name == &apos;System Administrator&apos;,  
Soft_Book__c == false,
OR(   
ISPICKVAL(Status, &quot;Approved&quot;),
ISPICKVAL(Status, &quot;Accepted&quot;), 
ISPICKVAL(Status, &quot;Synched&quot;), 
ISPICKVAL(Status, &quot;Rejected&quot;), 
ISPICKVAL(Status, &quot;Cancelled&quot;), 
ISPICKVAL(Status, &quot;CCL Acceptance&quot;))
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Cannot edit quote once approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opp_Required_Fields_before_quote_create</fullName>
        <active>false</active>
        <errorConditionFormula>$Profile.Name &lt;&gt; &quot;Integration User Profile&quot; &amp;&amp;
OR(Opportunity.Business_Park__c = &quot;&quot;, 
  ISPICKVAL( Opportunity.Lease_Type__c, &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Please complete Business Park, Opportunity Type and Lease Type before creating a new Quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_cannot_be_closed_lost</fullName>
        <active>true</active>
        <description>Quote cannot be created if the related opportunity is closed lost.</description>
        <errorConditionFormula>$Profile.Name &lt;&gt; &quot;Integration User Profile&quot; &amp;&amp; 
$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; ISNEW() &amp;&amp; ISPICKVAL(Opportunity.StageName, &apos;Closed Lost&apos;)</errorConditionFormula>
        <errorMessage>You cannot create a quote against a &apos;Closed Lost&apos; Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quote_Synched</fullName>
        <active>true</active>
        <description>Don&apos;t allow for creation of Quote when another is synched,</description>
        <errorConditionFormula>$Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp;
NOT(ISPICKVAL(Status , &quot;Cancelled&quot;)) &amp;&amp; Opportunity.SyncedQuoteId != NULL &amp;&amp; Opportunity.SyncedQuoteId!= Id</errorConditionFormula>
        <errorMessage>Creation of a new Quote is not allowed if there is a synched quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quote_cannot_be_be_updated_back_to_draft</fullName>
        <active>true</active>
        <description>The quote cannot be be updated back to draft.</description>
        <errorConditionFormula>$Profile.Name &lt;&gt; &quot;Integration User Profile&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
ISPICKVAL(Opportunity.StageName, &quot;Closed Lost&quot;) &amp;&amp;
ISPICKVAL( PRIORVALUE(Status) , &quot;Cancelled&quot;) &amp;&amp;
ISPICKVAL(Status, &quot;Draft&quot;)</errorConditionFormula>
        <errorMessage>The quote cannot be be updated back to draft.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quote_must_be_Submitted_for_Approval</fullName>
        <active>false</active>
        <description>Will enforce the user to submit for approval through the button and not through the change of status.</description>
        <errorConditionFormula>$Profile.Name &lt;&gt; &quot;Integration User Profile&quot; 
&amp;&amp; 
$Profile.Name &lt;&gt; &quot;System Administrator&quot; 
&amp;&amp; 
ISCHANGED(Status)
&amp;&amp; 
ISPICKVAL(Status, &quot;Under ApprovaL&quot;)
&amp;&amp;
(Manually_submitted__c = FALSE)</errorConditionFormula>
        <errorMessage>Approval needs to be requested by clicking the &apos;Submit for Approval&apos; button.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_Grace_period</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL( Status , &quot;Cancelled&quot;)) &amp;&amp; $Profile.Name &lt;&gt; &quot;Integration User Profile&quot; &amp;&amp;
OR(
AND(Grace_Period__c &gt; 0,
ISBLANK(TEXT(Grace_Period_Period__c))),

AND(Grace_Period__c &gt; 0,
ISBLANK(TEXT(Grace_Period_Mechanism__c))
)
)</errorConditionFormula>
        <errorMessage>Please specify Grace Period (Period) and Grace Period Mechanism.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Sync_Stop_Sync_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
ISPICKVAL( Status , &apos;Cancelled&apos;) &amp;&amp;  IsSyncing == True</errorConditionFormula>
        <errorMessage>Cancelled Quote cant be synced</errorMessage>
    </validationRules>
</CustomObject>